--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "apollo-server": "^2.21.2",
+    "graphql": "^15.5.0",
+    "mongoose": "^5.12.2"
+  }
 }
